feat: add colors and fonts, connect localization to menu and header